--- a/shop/src/main/webapp/resources/css/productView.css
+++ b/shop/src/main/webapp/resources/css/productView.css
@@ -1,5 +1,4 @@
 @charset "EUC-KR";
-
 h3{
 	text-align: center;
 	font-size: 35px;
@@ -7,26 +6,8 @@ h3{
 	margin-bottom:  70px;
 }
 
-.div-form{
-	margin-top: 10px;
-	 border-radius: 4px;
- 	 border: 1px solid #d9d6d6;
-  	 color: #383838;
-}
 
 
-select.box {
-  width: 30%;
-  height: 40px;
-  box-sizing: border-box;
-  margin-left: 35px;
-  padding: 5px 0 5px 10px;
-  border-radius: 4px;
-  border: 1px solid #d9d6d6;
-  color: #383838;
-  background-color: #ffffff;
-  font-family: 'Montserrat', 'Pretendard', sans-serif;
-}
 
 .form-control{
 	
@@ -46,9 +27,6 @@ select.box {
 
 
 
-
-input[type = file]{
-	width: 30%;
-	margin-left: 35%;
-	
+.div1{
+	margin-bottom:  20px;
 }
