--- a/shop/bin/src/main/webapp/resources/css/productPage.css
+++ b/shop/bin/src/main/webapp/resources/css/productPage.css
@@ -1,40 +1,105 @@
-@charset "EUC-KR";
-
-
 h3{
 	text-align: center;
 	font-size: 35px;
 	font-style: italic;
 }
 
-select.box {
-  width: 30%;
-  height: 30px;
-  box-sizing: border-box;
-  margin-left: 6px;
+/* 카테고리 검색 css*/
+
+.box{
+width: 30%;
+  height: 40px;
+  margin-top: 10px;
+  margin-left: 25px;
   padding: 5px 0 5px 10px;
   border-radius: 4px;
   border: 1px solid #d9d6d6;
   color: #383838;
   background-color: #ffffff;
   font-family: 'Montserrat', 'Pretendard', sans-serif;
+  box-shadow: 0 0 4px black ;
+  font-style: italic;	
+  text-align: center;
+  font-size: 15px;
 }
 
-input[type = text]{
+.boxbtn{
+	margin-left: 10px;
+	background-color:transparent;
+	border-radius: 5px;
+	border: 1px solid #d9d6d6;
+	box-shadow: 0 0 4px black ;
+	width: 50px;
+	height: 40px;
+}
+
+
+/* 제품명으로 검색 css */
+
+.name-search{
+	float: left;
+	margin-top: 50px;
+	margin-left: 20%;
+	margin-bottom: 30px;
+	border-radius: 5px;
+	border: 1px solid #d9d6d6;
+	box-shadow: 0 0 4px black ;
+	width: 300px;
+	height: 50px;
 	text-align: center;
 	font-size: 15px;
-	border: 0;
-	box-sizing: border-box;
-  	border-radius: 4px;
-  	font-weight: bold;
-  	padding: 10px;
-  	width: 92%;
-  	margin-right: 2px;
+}
+
+.name-searchbtn{
+	float: left;
+	margin-top: 50px;
+	margin-left: 10px;
+	margin-bottom: 30px;
+	background-color:transparent;
+	border-radius: 5px;
+	border: 1px solid #d9d6d6;
+	box-shadow: 0 0 4px black ;
+	width: 60px;
+	height: 50px;
+	font-size: 15px;
 }
 
 
-input[type=submit] {
+/* 판매자로 검색 css */
+
+.seller-search{
+	float: left;
+	margin-top: 50px;
+	margin-left: 200px;
+	margin-bottom: 30px;
+	border-radius: 5px;
+	border: 1px solid #d9d6d6;
+	box-shadow: 0 0 4px black ;
+	width: 300px;
+	height: 50px;
+	text-align: center;
+	font-size: 15px;
+}
+
+.seller-searchbtn{
+	float: left;
+	margin-top: 50px;
+	margin-left: 10px;
+	margin-bottom: 30px;
+	background-color:transparent;
+	border-radius: 5px;
+	border: 1px solid #d9d6d6;
+	box-shadow: 0 0 4px black ;
+	width: 60px;
+	height: 50px;
+	font-size: 15px;
+}
+
+/* 검색시 출력화면 css */
+
+.bo2 {
   background-color:transparent;
+  
   border: 0 solid #d9d6d6;
   border-radius: 5px;
   cursor: pointer;
@@ -43,5 +108,51 @@ input[type=submit] {
   font-weight: bold;
   line-height: 1.4;
   padding: 8px;
-  width: 100px
+  width: 20%;
+}
+
+.over{
+	margin-top: 40px;
+	
+}
+
+.table {
+  border: 1px #a39485 solid;
+  font-size: .9em;
+  box-shadow: 0 0 4px black ;
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+
+h2 {
+ text-align: center;
+ color: black; /* 글자 색상을 검정색으로 설정 */
+}
+
+th {
+  text-align: left;
+}
+  
+.thead {
+  font-weight: bold;
+  color: black;/* 헤더 텍스트 색상 (배경색으로 인해 안 보일 수 있음) */
+  background: transparent; /* 배경 색상을 투명하게 설정 */
+}
+  
+ td, th {
+  padding: 1em .5em;
+  vertical-align: middle;
+}
+  
+ td {
+  border-bottom: 1px solid rgba(0,0,0,.1);
+  background: #fff;
+}
+
+a {
+  color: #73685d;
 }
