--- a/shop/src/main/webapp/resources/css/loginForm.css
+++ b/shop/src/main/webapp/resources/css/loginForm.css
@@ -9,11 +9,30 @@ body{
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
+.mapin {
+    width: 40%; /* 길이를 늘리려면 더 큰 값으로 조정할 수 있습니다. */
+    margin-top: 4%;
+    font-size: 17px;
+    font-weight: bold;
+    padding: 12px 20px;
+    border-radius: 20px;
+    background: rgba(50,50,50,0.6); /* 배경을 흰색으로 설정 */
+    color: white; /* 글씨를 검정색으로 설정 */
+}
+	
+.input2 {
+	width: 45%;
+	border:none;
+	padding:12px 20px;
+	border-radius:20px;
+ 	background:rgba(255,255,255,.1);
+}
+
 .login-wrap{
   width:100%;
   margin:auto;
   max-width:505px;
-  min-height:860px;
+  min-height:1350px;
   position:relative;
   background:url(../cbimg/brad-pearson-Lhx8ioIdZyE-unsplash.jpg) no-repeat center;
   background-size: cover;
@@ -26,7 +45,7 @@ a{color:inherit;text-decoration:none}
   height: 100%;
   position: absolute;
   padding: calc(50vh - 430px) 70px 50px 70px; /* 수정된 부분 */
-  background: rgba(254, 235, 214, 0.35); /* 수정된 부분 */
+  background: rgba(254, 235, 214, 0.6); /* 수정된 부분 */
 }
 
 .login-html .sign-in-htm,
@@ -85,7 +104,7 @@ a{color:inherit;text-decoration:none}
   border:none;
   padding:15px 20px;
   border-radius:25px;
-  background:rgba(255,255,255,.1);
+  background:rgba(255,255,255,.4);
 }
 .login-form .group input[data-type="password"]{
   text-security:circle;
