디자인 아이콘 추가

--- a/shop/src/main/webapp/resources/boardcss/boardview.css
+++ b/shop/src/main/webapp/resources/boardcss/boardview.css
@@ -109,4 +109,24 @@ li{
 	border-top: 2px solid black;	
 }
 
+.btn1{
+	width: 60px;
+	height: 30px;
+	font-size: 17px;
+	margin-right: 10px;
+	background-color: transparent;
+	border: none;
+}
+
+
+
+.btn2{
+	width: 60px;
+	height: 30px;
+	font-size: 17px;
+	margin-left: 100px;
+	margin-right: 10px;
+	background-color: transparent;
+	border: none;
+}
 
