--- a/shop/src/main/webapp/resources/productcss/productview.css
+++ b/shop/src/main/webapp/resources/productcss/productview.css
@@ -88,7 +88,7 @@ li{
 
 .info {
 	width: 980px;
-	height: 600px;
+	height: 300px;
 
 	border: 5px solid #e8e8e8;
 	text-align: center;
@@ -101,4 +101,36 @@ li{
 .line1 {
 	margin-top: 30px;
 	border-top: 2px solid black;	
+}
+
+.reply{
+	margin-left: 400px;
+}
+
+h3{
+	margin-top: 50px;
+	text-align: center;
+}
+
+.reply1{
+	margin-top: 20px;
+	width: 700px;
+	height: 50px;
+	border: none;
+	text-align: center;
+	border: 1px solid #C4C4C4;
+	box-sizing: border-box;
+	border-radius: 10px;
+	padding: 12px 13px;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 16px;
+}
+
+.btn{
+	border: 1px solid #C4C4C4;
+	box-sizing: border-box;
+	border-radius: 10px;
 }
