--- a/shop/src/main/webapp/resources/css/Menu.css
+++ b/shop/src/main/webapp/resources/css/Menu.css
@@ -8,7 +8,7 @@
 
 .nav-bar {
   height: 85px;
-  background: transparent; /* 배경색 투명 */
+  background: transparent; 
   font-size: 17px;
   font-weight: bold;
 }
@@ -28,7 +28,7 @@
 
 .brand a,
 .brand a:visited {
-  color: #000000; /* 글꼴 색상 검정색 */
+  color: #000000; 
   text-decoration: none;
   font-style:italic;
 }
@@ -58,15 +58,15 @@ nav ul li a:visited {
   display: block;
   padding: 0 20px;
   line-height: 85px;
-  background: transparent; /* 배경색 투명 */
-  color: #000000; /* 글꼴 색상 검정색 */
+  background: transparent;
+  color: #000000; 
   text-decoration: none;
 }
 
 nav ul li a:hover,
 nav ul li a:visited:hover {
-  background: rgb(255, 255, 255); /* 배경색 투명 */
-  color: #000000; /* 글꼴 색상 검정색 */
+  background: rgb(255, 255, 255); 
+  color: #000000; 
 }
 
 nav ul li a:not(:only-child):after,
@@ -95,7 +95,7 @@ nav ul li ul li a {
   position: absolute;
   top: 0;
   right: 0;
-  background: transparent; /* 배경색 투명 */
+  background: transparent; 
   height: 85px;
   width: 85px;
 }
