--- a/shop/src/main/webapp/resources/boardcss/boardview.css
+++ b/shop/src/main/webapp/resources/boardcss/boardview.css
@@ -130,3 +130,36 @@ li{
 	border: none;
 }
 
+.reply{
+	margin-left: 400px;
+}
+
+h3{
+	margin-top: 50px;
+	text-align: center;
+}
+
+.reply1{
+	margin-top: 20px;
+	width: 700px;
+	height: 50px;
+	border: none;
+	text-align: center;
+	border: 1px solid #C4C4C4;
+	box-sizing: border-box;
+	border-radius: 10px;
+	padding: 12px 13px;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 16px;
+}
+
+.btn{
+	border: 1px solid #C4C4C4;
+	box-sizing: border-box;
+	border-radius: 10px;
+}
+
+
