--- a/shop/src/main/webapp/resources/css/adminList.css
+++ b/shop/src/main/webapp/resources/css/adminList.css
@@ -14,8 +14,8 @@ table {
 }
 
 h2 {
- text-align: left;
- margin-left: 10%;
+ text-align: center;
+	font-size: 35px;
  color: black; /* 글자 색상을 검정색으로 설정 */
 }
 
@@ -41,6 +41,7 @@ thead {
 
 a {
   color: #73685d;
+  text-decoration: none;
 }
 
 
