--- a/shop/src/main/webapp/resources/css/loginForm.css
+++ b/shop/src/main/webapp/resources/css/loginForm.css
@@ -22,6 +22,7 @@ a{color:inherit;text-decoration:none}
 	
 .input2 {
 	width: 45%;
+	font-size: 15px;
 	border:none;
 	padding:12px 20px;
 	border-radius:20px;
@@ -94,9 +95,10 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .input,
 .login-form .group .button{
+	margin-bottom: 15px;
   width:100%;
   color:#000000;
-  font-size:14px;
+  font-size:15px;
   display:block;
 }
 .login-form .group .input,
@@ -117,13 +119,16 @@ a{color:inherit;text-decoration:none}
 	.login-form .group .input2,
 	.login-form .group .button2{
 	  border:none;
+	  font-size: 16px;
 	  padding:12px 20px;
 	  border-radius:20px;
 	  background:rgba(255,255,255,.1);
 	}
 
 
-
+.ra{
+	margin-top: 25px;
+}
 
 
 .login-form .group input[data-type="password"]{
@@ -132,7 +137,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-form .group .label{
   color:#000000;
-  font-size:14px;
+  font-size:18px;
 }
 .login-form .group .button{
  background-color:transparent;
