--- a/shop/src/main/webapp/resources/css/membermainPage.css
+++ b/shop/src/main/webapp/resources/css/membermainPage.css
@@ -1,20 +1,34 @@
+body{
+	margin: 0px; height: 0px;
+}
 
 .first{
-
+	background-image: url('../cbimg/kyle-glenn-rcCG9F3b4rA-unsplash.jpg');
+	background-size: cover;
+	background-repeat:  no-repeat;
+	background-position: center;
 	position: relative;
-	border: black 2px solid;
+	border: 4px;
+	width: 300px;
+	height: 300px;
+	margin-top: 70px;
+	margin-left: 470px;
 	float: left;
-	
-}
 
+}
 
 .second{
-
+	background-image: url('../cbimg/absolutvision-82TpEld0_e4-unsplash.jpg');
+	background-size: cover;
+	background-repeat:  no-repeat;
+	background-position: center;
 	position: relative;
-	border: black 2px solid;
+	width: 300px;
+	height: 300px;
+	margin-top: 70px;
+	margin-left: 200px;
 	float: left;
 }
-
 
 p{
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -28,7 +42,7 @@ p{
 	margin-left: 570px;
 	float: left;
 	font-size: 20px;
-	
+
 }
 
 .a2{
