--- a/shop/src/main/webapp/resources/productcss/productview.css
+++ b/shop/src/main/webapp/resources/productcss/productview.css
@@ -56,9 +56,10 @@ li{
 .product-view h2{
 	padding: 0 0 20px;
 	
-	font-size: 24px;
+	font-size: 30px;
 	color: #232323;
 	line-height: 26px;
+	font-weight: bolder;
 }
 
 .product-view h5{
@@ -68,6 +69,7 @@ li{
 	font-size: 16px;
 	color: #232323;
 	line-height: 26px;
+	font-weight: bolder;
 }
 
 .product-view table th ,
