--- a/shop/src/main/webapp/resources/boardcss/boardedit.css
+++ b/shop/src/main/webapp/resources/boardcss/boardedit.css
@@ -9,6 +9,7 @@ h3{
 body{
 	padding: 50px;
 	min-height: 100%;
+	background: #f5f5f5
 }
 
 li{
@@ -102,17 +103,17 @@ li{
 	width: 980px;
 	height: 600px;
 
-	border: 5px solid #e8e8e8;
+	border: 5px solid #73685d;
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	margin-top: 100px;
 	margin-left: 280px;
 	resize: none;
+	border-radius: 2px;
 }
 
 .line1 {
-	margin-top: 30px;
-	border-top: 2px solid black;	
+	border-top: 4px solid #73685d;	
 }
 
 .btn {
