--- a/shop/src/main/webapp/resources/boardcss/boardlist.css
+++ b/shop/src/main/webapp/resources/boardcss/boardlist.css
@@ -1,5 +1,8 @@
 @charset "EUC-KR";
 
+body{
+	  background: #f5f5f5
+}
 
 h3{
 	text-align: center;
@@ -11,8 +14,7 @@ table {
   border: 1px #a39485 solid;
   font-size: .9em;
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
   border-collapse: collapse;
   border-radius: 5px;
   overflow: hidden;
@@ -24,8 +26,8 @@ th {
   
 thead {
   font-weight: bold;
-  color: black;
-  background: transparent; 
+  color: #fff;
+  background: #73685d;
 }
   
  td, th {
@@ -35,7 +37,54 @@ thead {
   
  td {
   border-bottom: 1px solid rgba(0,0,0,.1);
+  background: #fff;
+}
+
+a {
+  color: #73685d;
+  text-decoration: none;
+}
+  
+ @media all and (max-width: 768px) {
+    
+  table, thead, tbody, th, td, tr {
+    display: block;
   }
   
-
+  th {
+    text-align: right;
+  }
   
+  table {
+    position: relative; 
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+  }
+  
+  thead {
+    float: left;
+    white-space: nowrap;
+  }
+  
+  tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+  }
+  
+  tr {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  th {
+    border-bottom: 1px solid #a39485;
+  }
+  
+  td {
+    border-bottom: 1px solid #e5e5e5;
+  }
+  
+  }
