--- a/shop/src/main/webapp/resources/css/adminList.css
+++ b/shop/src/main/webapp/resources/css/adminList.css
@@ -1,22 +1,24 @@
 body {
-  background: transparent; /* 배경 색상을 투명하게 설정 */
+  padding:1.5em;
+  background: #f5f5f5
 }
+
+
+h2{
+	text-align: center;
+	margin-top: 250px;
+	font-size: 35px;
+}
+
 
 table {
   border: 1px #a39485 solid;
   font-size: .9em;
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
   border-collapse: collapse;
   border-radius: 5px;
   overflow: hidden;
-}
-
-h2 {
- text-align: center;
-	font-size: 35px;
- color: black; /* 글자 색상을 검정색으로 설정 */
 }
 
 th {
@@ -25,8 +27,8 @@ th {
   
 thead {
   font-weight: bold;
-  color: black;/* 헤더 텍스트 색상 (배경색으로 인해 안 보일 수 있음) */
-  background: transparent; /* 배경 색상을 투명하게 설정 */
+  color: #fff;
+  background: #73685d;
 }
   
  td, th {
@@ -43,6 +45,47 @@ a {
   color: #73685d;
   text-decoration: none;
 }
-
-
   
+ @media all and (max-width: 768px) {
+    
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+  
+  th {
+    text-align: right;
+  }
+  
+  table {
+    position: relative; 
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+  }
+  
+  thead {
+    float: left;
+    white-space: nowrap;
+  }
+  
+  tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+  }
+  
+  tr {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  th {
+    border-bottom: 1px solid #a39485;
+  }
+  
+  td {
+    border-bottom: 1px solid #e5e5e5;
+  }
+  
+  }
