--- a/shop/src/main/webapp/resources/noticecss/noticelist1.css
+++ b/shop/src/main/webapp/resources/noticecss/noticelist1.css
@@ -1,7 +1,6 @@
-@charset "EUC-KR";
-
-body{
-	  background: #f5f5f5
+body {
+  padding:1.5em;
+  background: #f5f5f5
 }
 
 
@@ -10,7 +9,6 @@ h3{
 	margin-top: 100px;
 	font-size: 35px;
 }
-
 
 table {
   border: 1px #a39485 solid;
@@ -44,7 +42,6 @@ thead {
 
 a {
   color: #73685d;
-  text-decoration: none;
 }
   
  @media all and (max-width: 768px) {
