--- a/shop/src/main/webapp/resources/productcss/productadd.css
+++ b/shop/src/main/webapp/resources/productcss/productadd.css
@@ -11,6 +11,7 @@ input{
 body{
 	padding: 50px;
 	min-height: 100%;
+	background: #f5f5f5
 }
 
 /* 카테고리 css */
@@ -132,17 +133,17 @@ li{
 	width: 980px;
 	height: 600px;
 
-	border: 5px solid #e8e8e8;
+	border: 5px solid #73685d;
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	margin-top: 100px;
 	margin-left: 280px;
 	resize: none;
+	border-radius: 2px;
 }
 
 .line1 {
-	margin-top: 30px;
-	border-top: 2px solid black;	
+	border-top: 4px solid #73685d;	
 }
 
 .btn {
