--- a/shop/src/main/webapp/resources/productcss/productpage.css
+++ b/shop/src/main/webapp/resources/productcss/productpage.css
@@ -1,3 +1,7 @@
+body{
+	  background: #f5f5f5
+}
+
 h3{
 	text-align: center;
 	margin-top: 50px;
@@ -85,8 +89,8 @@ table {
   border: 1px #a39485 solid;
   font-size: .9em;
   box-shadow: 0 2px 5px rgba(0,0,0,.25);
+  margin-left: 10%;
   width: 80%;
-  margin: 0 auto;
   border-collapse: collapse;
   border-radius: 5px;
   overflow: hidden;
@@ -98,8 +102,8 @@ th {
   
 thead {
   font-weight: bold;
-  color: black;/* 헤더 텍스트 색상 (배경색으로 인해 안 보일 수 있음) */
-  background: transparent; /* 배경 색상을 투명하게 설정 */
+  color: #fff;
+  background: #73685d;
 }
   
  td, th {
@@ -109,6 +113,56 @@ thead {
   
  td {
   border-bottom: 1px solid rgba(0,0,0,.1);
+  background: #fff;
+}
+
+a {
+  color: #73685d;
+  text-decoration: none;
+}
+  
+ @media all and (max-width: 768px) {
+    
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+  
+  th {
+    text-align: right;
+  }
+  
+  table {
+    position: relative; 
+    padding-bottom: 0;
+    border: none;
+    box-shadow: 0 0 10px rgba(0,0,0,.2);
+  }
+  
+  thead {
+    float: left;
+    white-space: nowrap;
+  }
+  
+  tbody {
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    white-space: nowrap;
+  }
+  
+  tr {
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  th {
+    border-bottom: 1px solid #a39485;
+  }
+  
+  td {
+    border-bottom: 1px solid #e5e5e5;
+  }
+  
   }
   
   .btn{
