--- a/shop/src/main/webapp/resources/productcss/productpage.css
+++ b/shop/src/main/webapp/resources/productcss/productpage.css
@@ -211,7 +211,23 @@ a {
   width: 100%;
 } 
   
-  
+  footer{
+	clear: both;
+	width: 100%;
+	height: 80px;
+	margin-top: 100px;
+	background-color: #73685d;
+}
+
+
+
+footer .copyright p{
+	font-size: 17px;
+	color: black;
+	text-align: center;
+	padding: 32px 0 0 40px;
+}
+
   
   
   
