--- a/shop/src/main/webapp/resources/productcss/productview.css
+++ b/shop/src/main/webapp/resources/productcss/productview.css
@@ -154,3 +154,20 @@ h3{
 	font-weight: 400;
 	font-size: 17px;
 }
+
+footer{
+	clear: both;
+	width: 100%;
+	height: 80px;
+	margin-top: 100px;
+	background-color: #73685d;
+}
+
+
+
+footer .copyright p{
+	font-size: 17px;
+	color: black;
+	text-align: center;
+	padding: 32px 0 0 40px;
+}
