--- a/shop/src/main/webapp/resources/noticecss/noticeadd.css
+++ b/shop/src/main/webapp/resources/noticecss/noticeadd.css
@@ -40,9 +40,13 @@ h3{
 }
 
 .btn {
-float: right;
-  transition: all 0.3s ease;
-  font-size: 17px;
+	float: left;
+	margin-top: 100px;
+	margin-left: 520px;
+  	transition: all 0.3s ease;
+  	font-size: 20px;
+  	width: 100px;
+  	height: 60px;
 }
 .btn:hover {
    box-shadow:
@@ -50,4 +54,25 @@ float: right;
    -4px -4px 5px 0px #fff9,
    7px 7px 20px 0px #0002,
    4px 4px 5px 0px #0001;
+}
+
+
+footer{
+	clear: both;
+	width: 103%;
+	height: 80px;
+	margin-top: 300px;
+	margin-bottom: -100px;
+	margin-left: -50px;
+	margin-right: 100px;
+	background-color: #73685d;
+}
+
+
+
+footer .copyright p{
+	font-size: 17px;
+	color: black;
+	text-align: center;
+	padding: 32px 0 0 40px;
 }
