--- a/shop/src/main/webapp/resources/noticecss/noticeview.css
+++ b/shop/src/main/webapp/resources/noticecss/noticeview.css
@@ -2,22 +2,18 @@
 
 
 .info {
-	width: 1200px;
-	height: 700px;
-
-	border: 5px solid #73685d;
+	width: 1400px;
+	height: 900px;
 	text-align: center;
 	font-size: 30px;
-	margin-top: 100px;
-	margin-left: 280px;
+	margin-left: 150px;
+	margin-top: 50px;
 	resize: none;
-	border-radius: 2px;
+	border: 5px double black;
+	border-radius: 5px;
+	outline: none;
 }
 
-.line1 {
-	
-	border-top: 4px solid #73685d;	
-}
 
 
 .name{
@@ -62,6 +58,7 @@ h3{
 float: right;
   transition: all 0.3s ease;
   font-size: 17px;
+  
 }
 .btn:hover {
    box-shadow:
@@ -75,7 +72,10 @@ float: right;
 	width: 60px;
 	height: 30px;
 	font-size: 19px;
+	margin-left: 1370px;
 	margin-right: 10px;
+	
+	margin-bottom: 10px;
 	background-color: transparent;
 	border: none;
 }
