--- a/shop/src/main/webapp/resources/productcss/productedit.css
+++ b/shop/src/main/webapp/resources/productcss/productedit.css
@@ -68,10 +68,14 @@ li{
 
 .product-view h2{
 	padding: 0 0 20px;
-	
 	font-size: 24px;
 	color: #232323;
 	line-height: 26px;
+}
+
+.product-view h2 input{
+	background-color: transparent;
+	border-radius: 3px;
 }
 
 .product-view h5{
@@ -89,10 +93,17 @@ li{
 	font-size: 17px;
 	color: #444;
 	text-align: left;
-}
+	border-radius: 3px;
+	}
 
 .product-view table td{
 	padding-left: 100px;
+}
+
+.product-view table td input{
+	background-color: transparent;
+	text-align: center;
+	border-radius: 3px;
 }
 
 .product-view table td.pricecolor {
@@ -109,7 +120,8 @@ li{
 	margin-top: 100px;
 	margin-left: 280px;
 	resize: none;
-	border-radius: 2px;
+	border-radius: 4px;
+	background-color: transparent;
 }
 
 .line1 {
